--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#gallery">Последние новости</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#contacts">Контакты</a></li>
                     <li class="nav-item"><a class="nav-link btn btn-outline-primary ms-2" href="registration.html">
-                        <i class="fas fa-calendar-plus me-1"></i> Записаться
+                        <li class="nav-item ms-3">
+    <a class="nav-link btn btn-record" href="registration.html">
+        Записаться
                     </a></li>
                 </ul>
             </div>
@@ -607,3 +609,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
