--- a/registration.html
+++ b/registration.html
@@ -36,7 +36,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#gallery">Последние новости</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#contacts">Контакты</a></li>
                     <li class="nav-item"><a class="nav-link btn btn-outline-primary ms-2" href="registration.html">
-                    <li class="nav-item"><a class="nav-link" href="registration.html#registration">Записаться</a>a></i>
+                    <li class="nav-item"><a class="nav-link" href="registration.html#registration">Записаться</a></i>
                     </a></li>
                 </ul>
             </div>
@@ -496,3 +496,4 @@
     </script>
 </body>
 </html>
+
