--- a/registration.html
+++ b/registration.html
@@ -342,6 +342,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script>
+        // Специальный скрипт для страницы записи
         document.getElementById('registrationForm').addEventListener('submit', function(e) {
             e.preventDefault();
             
@@ -496,4 +497,5 @@
     </script>
 </body>
 </html>
+
 
